# ecommerce

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: pyproject.toml
backend/ecommerce/: config.py  main.py
backend/ecommerce/api/: __init__.py  dependencies.py
backend/ecommerce/api/endpoints/: category.py  image.py  item.py  login.py  product.py  user.py
backend/ecommerce/api/v1/: __init__.py  dependencies.py
backend/ecommerce/core/: security.py
backend/ecommerce/db/: __init__.py  image.py  user.py
backend/ecommerce/file/: __init__.py  local.py
backend/ecommerce/schemas/: product.py  user.py
backend/ecommerce/worker/: tasks.py
backend/scripts/: connection_benchmark.py
backend/tests/unit/: test_rest_api.py
ecommerce/: config.py  main.py
ecommerce/api/v1/: __init__.py  dependencies.py
ecommerce/api/v1/endpoints/: category.py  item.py  items.py  login.py  product.py  user.py
ecommerce/common/: data_model.py  db_client.py
ecommerce/core/: security.py
ecommerce/db/: __init__.py  attribute.py  category.py  item.py  product.py
ecommerce/schemas/: product.py  user.py
ecommerce/worker/: __init__.py  tasks.py
frontend/: bun.lockb  package-lock.json  package.json  tsconfig.json
frontend/scripts/: regenerate_client.sh
frontend/src/: App.tsx  auth copy.tsx  auth.tsx  main.tsx  routeTree.gen.ts
frontend/src/client/: index.ts
frontend/src/client/models/: AttributeCreate.ts  AttributeRead.ts  AttributeValueCreate.ts  AttributeValueRead.ts  Body_login_get_access_token.ts  Body_product_post_image.ts  CategoryCreate.ts  CategoryRead.ts  CategoryReadWithProducts.ts  Image.ts  ItemCreate.ts  ItemRead.ts  ItemUpdate.ts  ProductCreate.ts  ProductRead.ts  ProductReadWithAttributes.ts  ProductReadWithItems.ts  ProductUpdate.ts  Token.ts  UserCreate.ts  UserRead.ts
frontend/src/client/schemas/: $AttributeCreate.ts  $AttributeRead.ts  $AttributeValueCreate.ts  $AttributeValueRead.ts  $Body_login_get_access_token.ts  $Body_product_post_image.ts  $CategoryCreate.ts  $CategoryRead.ts  $CategoryReadWithProducts.ts  $Image.ts  $ItemCreate.ts  $ItemRead.ts  $ItemUpdate.ts  $ProductCreate.ts  $ProductRead.ts  $ProductReadWithAttributes.ts  $ProductReadWithItems.ts  $ProductUpdate.ts  $UserCreate.ts  $UserRead.ts
frontend/src/components/: NavBar.tsx
frontend/src/pages/: Dashboard.tsx  Loging.tsx
frontend/src/routes/: __root.tsx  _admin.tsx  index.tsx  login.tsx
scripts/: init.sql  run_tests.sh
tests/unit/: test_db_client.py  test_rest_api.py
(+9 files in other folders)
