[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Luis Villamil <lmv13@my.fsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.17"
fastapi = "^0.99.1"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
pydantic = {version = "*", extras = ["email"]}
python-jose = {version = "*", extras = ["cryptography"]}
passlib = {version = "*", extras = ["bcrypt"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
