[tool.poetry]
name = "ecommerce"
version = "0.3.0"
description = ""
authors = ["Luis Villamil <lmv13@my.fsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.17"
fastapi = "^0.109.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.7"
pydantic = {version = "*", extras = ["email"]}
pydantic-settings = "*"
python-jose = {version = "*", extras = ["cryptography"]}
sqlmodel = "*"
passlib = {version = "*", extras = ["bcrypt"]}
httpx = "^0.24.1"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.3"
aiofiles = "^23.2.1"
faststream = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
